SSG-10824 fixed PatchServiceTest: sun.security.tools.JarSigner class does not exist any more. sun.security.tools.jarsigner.Main class was used instead
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/branches/trunk_jdk8_post_javelin@42525 219f1c6e-4a0e-43c8-96f2-6e749be13fd4